actually fix weird image behavior on IOS
mother FUCKER

--- a/Shared/main.css
+++ b/Shared/main.css
@@ -106,6 +106,7 @@ img{
     padding: 8px;
     padding-right: 16px;
     height: calc(180px - 16px);
+    width: fit-content;
     float: left;
 }
 
